{
  "version": 4,
  "terraform_version": "1.39.0",
  "serial": 1,
  "lineage": "",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ac--a953ad6f802b345fe85f29d793a4e104",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/net/a953ad6f802b345fe85f29d793a4e104/020ba1187374b56a",
            "arn_suffix": "net/a953ad6f802b345fe85f29d793a4e104/020ba1187374b56a",
            "dns_name": "a953ad6f802b345fe85f29d793a4e104-020ba1187374b56a.elb.eu-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/net/a953ad6f802b345fe85f29d793a4e104/020ba1187374b56a",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "a953ad6f802b345fe85f29d793a4e104",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002ad57466d0cfd46"
              },
              {
                "subnet_id": "subnet-09aa7e3eabd5bae59"
              }
            ],
            "subnets": [
              "subnet-002ad57466d0cfd46",
              "subnet-09aa7e3eabd5bae59"
            ],
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/service-name": "ingress-nginx/ingress-nginx-controller-internal"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/service-name": "ingress-nginx/ingress-nginx-controller-internal"
            },
            "vpc_id": "vpc-0a776fe934cdc9011",
            "zone_id": "ZD4D7Y8KGAS4G"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ac--ec2-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/app/ec2-internal/5db290448251c166",
            "arn_suffix": "app/ec2-internal/5db290448251c166",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ec2-internal-1302566627.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/app/ec2-internal/5db290448251c166",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ec2-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03790994b68291a2b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002ad57466d0cfd46"
              },
              {
                "subnet_id": "subnet-09aa7e3eabd5bae59"
              }
            ],
            "subnets": [
              "subnet-002ad57466d0cfd46",
              "subnet-09aa7e3eabd5bae59"
            ],
            "vpc_id": "vpc-0a776fe934cdc9011",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ac--main-internet-facing-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/app/main-internet-facing-lb/230b2a557ad6f675",
            "arn_suffix": "app/main-internet-facing-lb/230b2a557ad6f675",
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-internet-facing-lb-627958218.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/app/main-internet-facing-lb/230b2a557ad6f675",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-internet-facing-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f2aa943abf46aa2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0124b4e97562ebbd7"
              },
              {
                "subnet_id": "subnet-0d715c5c159eae0fb"
              }
            ],
            "subnets": [
              "subnet-0124b4e97562ebbd7",
              "subnet-0d715c5c159eae0fb"
            ],
            "vpc_id": "vpc-0a776fe934cdc9011",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ac--arn-003A-aws-003A-elasticloadbalancing-003A-eu-west-2-003A-766176144542-003A-listener-002F-app-002F-ec2-internal-002F-5db290448251c166-002F-69e59c59ef6badc4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/app/ec2-internal/5db290448251c166/69e59c59ef6badc4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/app/ec2-internal/5db290448251c166/69e59c59ef6badc4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/app/ec2-internal/5db290448251c166",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ac--ec2-internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ac--arn-003A-aws-003A-elasticloadbalancing-003A-eu-west-2-003A-766176144542-003A-listener-002F-app-002F-ec2-internal-002F-5db290448251c166-002F-b909a6332517c15e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/app/ec2-internal/5db290448251c166/b909a6332517c15e",
            "certificate_arn": "arn:aws:acm:eu-west-2:766176144542:certificate/99369ce8-843d-4837-87e9-0fc652e88f39",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/app/ec2-internal/5db290448251c166/b909a6332517c15e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/app/ec2-internal/5db290448251c166",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ac--ec2-internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ac--arn-003A-aws-003A-elasticloadbalancing-003A-eu-west-2-003A-766176144542-003A-listener-002F-app-002F-main-internet-facing-lb-002F-230b2a557ad6f675-002F-337f73e1e9498d12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/app/main-internet-facing-lb/230b2a557ad6f675/337f73e1e9498d12",
            "certificate_arn": "arn:aws:acm:eu-west-2:766176144542:certificate/99369ce8-843d-4837-87e9-0fc652e88f39",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/app/main-internet-facing-lb/230b2a557ad6f675/337f73e1e9498d12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/app/main-internet-facing-lb/230b2a557ad6f675",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ac--main-internet-facing-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ac--arn-003A-aws-003A-elasticloadbalancing-003A-eu-west-2-003A-766176144542-003A-listener-002F-app-002F-main-internet-facing-lb-002F-230b2a557ad6f675-002F-7cdbb06f00117511",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/app/main-internet-facing-lb/230b2a557ad6f675/7cdbb06f00117511",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/app/main-internet-facing-lb/230b2a557ad6f675/7cdbb06f00117511",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/app/main-internet-facing-lb/230b2a557ad6f675",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ac--main-internet-facing-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ac--arn-003A-aws-003A-elasticloadbalancing-003A-eu-west-2-003A-766176144542-003A-listener-002F-net-002F-a953ad6f802b345fe85f29d793a4e104-002F-020ba1187374b56a-002F-3d16c1315760ab22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/net/a953ad6f802b345fe85f29d793a4e104/020ba1187374b56a/3d16c1315760ab22",
            "certificate_arn": "arn:aws:acm:eu-west-2:766176144542:certificate/61cc4da6-9c33-4eb5-8f91-cbfc389b4b50",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:listener/net/a953ad6f802b345fe85f29d793a4e104/020ba1187374b56a/3d16c1315760ab22",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:loadbalancer/net/a953ad6f802b345fe85f29d793a4e104/020ba1187374b56a",
            "port": 443,
            "protocol": "TLS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/service-name": "ingress-nginx/ingress-nginx-controller-internal"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/service-name": "ingress-nginx/ingress-nginx-controller-internal"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ac--a953ad6f802b345fe85f29d793a4e104",
            "aws_lb_target_group.ac--k8s-ingressn-ingressn-f92c018ed1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac--internal-nlb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/internal-nlb-tg/bb61b936c1f5148a",
            "arn_suffix": "targetgroup/internal-nlb-tg/bb61b936c1f5148a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/internal-nlb-tg/bb61b936c1f5148a",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internal-nlb-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a776fe934cdc9011"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac--jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/jenkins/9738b80de8f66efb",
            "arn_suffix": "targetgroup/jenkins/9738b80de8f66efb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/jenkins/9738b80de8f66efb",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a776fe934cdc9011"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac--k8s-ingressn-ingressn-f92c018ed1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "arn_suffix": "targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "ip_address_type": "ipv4",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-ingressn-ingressn-f92c018ed1",
            "port": 32033,
            "preserve_client_ip": "true",
            "protocol": "TLS",
            "proxy_protocol_v2": false,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/service-name": "ingress-nginx/ingress-nginx-controller-internal"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/service-name": "ingress-nginx/ingress-nginx-controller-internal"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a776fe934cdc9011"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac--kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/kibana/7df2a4840b11b7c1",
            "arn_suffix": "targetgroup/kibana/7df2a4840b11b7c1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/kibana/7df2a4840b11b7c1",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kibana",
            "port": 5601,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a776fe934cdc9011"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac--metabase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/metabase/eca1ffe6b3451930",
            "arn_suffix": "targetgroup/metabase/eca1ffe6b3451930",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/metabase/eca1ffe6b3451930",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "metabase",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a776fe934cdc9011"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac--metabase-public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/metabase-public-lb/eeb793f87d4d6fe3",
            "arn_suffix": "targetgroup/metabase-public-lb/eeb793f87d4d6fe3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/metabase-public-lb/eeb793f87d4d6fe3",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "metabase-public-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a776fe934cdc9011"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac--proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/proxy/e75afe49eab6d9d7",
            "arn_suffix": "targetgroup/proxy/e75afe49eab6d9d7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/proxy/e75afe49eab6d9d7",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "proxy",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a776fe934cdc9011"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac--wordpress-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/wordpress-tg/62d6733320579c0b",
            "arn_suffix": "targetgroup/wordpress-tg/62d6733320579c0b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/wordpress-tg/62d6733320579c0b",
            "ip_address_type": "ipv4",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a776fe934cdc9011"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--10-002E-40-002E-135-002E-121",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "10.40.135.121",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/internal-nlb-tg/bb61b936c1f5148a",
            "target_id": "10.40.135.121"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--10-002E-40-002E-148-002E-87",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "10.40.148.87",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/internal-nlb-tg/bb61b936c1f5148a",
            "target_id": "10.40.148.87"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-008d7e6614222b602",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-008d7e6614222b602",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-008d7e6614222b602"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-00f2670c88b40328e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-00f2670c88b40328e",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-00f2670c88b40328e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-0130d3a39f9b2737d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-0130d3a39f9b2737d",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-0130d3a39f9b2737d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-01c6720a66005f8bb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-01c6720a66005f8bb",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/kibana/7df2a4840b11b7c1",
            "target_id": "i-01c6720a66005f8bb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-01c7ef7ba646e6a54",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-01c7ef7ba646e6a54",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/wordpress-tg/62d6733320579c0b",
            "target_id": "i-01c7ef7ba646e6a54"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-02199476884f35278",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-02199476884f35278",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/proxy/e75afe49eab6d9d7",
            "target_id": "i-02199476884f35278"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-06ff6e10c20a9cca6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-06ff6e10c20a9cca6",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-06ff6e10c20a9cca6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-07a923548d681a04f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-07a923548d681a04f",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/jenkins/9738b80de8f66efb",
            "target_id": "i-07a923548d681a04f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-09b50ae9297aec290",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-09b50ae9297aec290",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-09b50ae9297aec290"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-0b7275149b005dfd2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-0b7275149b005dfd2",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-0b7275149b005dfd2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-0e5f6eaf5507b2388",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-0e5f6eaf5507b2388",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-0e5f6eaf5507b2388"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-0faff146006ccaaaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-0faff146006ccaaaa",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-0faff146006ccaaaa"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac--i-0fe0cfe073be148d3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "i-0fe0cfe073be148d3",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:766176144542:targetgroup/k8s-ingressn-ingressn-f92c018ed1/c60d9f77ff5d321f",
            "target_id": "i-0fe0cfe073be148d3"
          }
        }
      ]
    }
  ]
}